Update to latest version.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!--
 THEY'RE TRASHING OUR RIGHTS,
 THEY'RE TRASHING THE FLOW OF DATA,
@@ -12,6 +13,6 @@ THEY'RE TRASHING THE FLOW OF DATA,
 |  __/| |___ / ___ \| |\  | |___  | | |_|
 |_|   |_____/_/   \_\_| \_|_____| |_| (_)
 -->
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./icon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Jacob Hitchins"/><link rel="apple-touch-icon" href="./icon.png"/><link rel="manifest" href="./manifest.json"/><title>Jacob Hitchins</title><script defer="defer" src="./static/js/main.3605c0a8.js"></script><link href="./static/css/main.de8383ac.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to load this page.</noscript><div id="root"></div></body></html>
-<!-- Website created by Jacob Hitchins, all rights reserved, Copyright © 2022 -->
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./icon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Jacob Hitchins"/><link rel="apple-touch-icon" href="./icon.png"/><link rel="manifest" href="./manifest.json"/><title>Jacob Hitchins</title><script defer="defer" src="./static/js/main.9c8b9c73.js"></script><link href="./static/css/main.de8383ac.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to load this page.</noscript><div id="root"></div></body></html>
+<!-- Website created by Jacob Hitchins, all rights reserved, Copyright © 2022, I'll sic the lawyers on you etc. -->
 <!-- 11B1 D7CC 7604 D55A E27E 1C82 FBD2 3D20 79F7 AE6A -->
